--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Inventa-electronics by inventa-electronics</title>
+    <title>inventa-electronics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,12 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Inventa-electronics</h1>
+      <h1 class="project-name">inventa-electronics</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
-      <p>launching soon</p>
+      <p>launching soon . . .</p>
 
       <footer class="site-footer">
 <!--
