--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-      <p>launching soon . . .</p>
+      <p>Launching soon . . .</p>
 
       <footer class="site-footer">
 <!--
